--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -581,6 +581,38 @@ section,
   color: var(--accent-color);
 }
 
+
+
+.hero .Button_Contact button[type=submit] {
+  margin-top: 100px;
+}
+
+
+/* font-size: 20px;
+display: inline-block;
+color: color-mix(in srgb, var(--default-color), transparent 30%);
+line-height: 1;
+margin-right: 20px;
+transition: 0.3s; */
+
+.hero .Button_Contact button[type=submit] {
+
+  color: var(--contrast-color);
+  background: var(--accent-color);
+  border: 0;
+  padding: 10px 20px;
+  transition: 0.4s;
+  border-radius: 0px;
+  margin-right: 15px;
+}
+
+.hero .Button_Contact button[type=submit]:hover {
+  /* color: var(--accent-color); */
+  background: color-mix(in srgb, var(--accent-color), transparent 25%);
+}
+
+
+
 @media (max-width: 768px) {
   .hero h2 {
     font-size: 32px;
